--- a/index.html
+++ b/index.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title></title>
-		<link rel="stylesheet" href="/dist/style.css" />
-		<script defer src="/dist/script.js"></script>
-	</head>
-	<body>
-		
-	</body>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title></title>
+	<link rel="stylesheet" href="/dist/style.css" />
+	<script defer src="/dist/script.js"></script>
+</head>
+
+<body>
+	<div class="main">
+
+
+		<div class="join">
+			<h1>Join our community</h1>
+
+			<h2>30-day, hassle-free money back guarantee</h2>
+
+			<p>
+				Gain access to our full library of tutorials along with expert code reviews.
+				Perfect for any developers who are serious about honing their skills.
+			</p>
+		</div>
+
+		<div class="price">
+			<h1>Monthly Subscription</h1>
+			<div class="price-permonth">
+				<h2>&dollar;29</h2><span> per month</span>
+			</div>
+
+			<p>Full access for less than &dollar;1 a day</p>
+			<div class="button">Sign Up</div>
+		</div>
+
+		<div class="about">
+			<h1>Why Us</h1>
+			<p>
+				Tutorials by industry experts
+				Peer &amp; expert code review
+				Coding exercises
+				Access to our GitHub repos
+				Community forum
+				Flashcard decks
+				New videos every week
+			</p>
+		</div>
+
+	</div>
+</body>
+
 </html>
